--- a/meetups/cncf-bdx/2019-06-04_cncf5.md
+++ b/meetups/cncf-bdx/2019-06-04_cncf5.md
@@ -2,6 +2,20 @@
 🕑 *Estimated reading time:* **?mn**
 
 ## Table of Contents
+  * [CNCF time](#cncf-time)
+  * [Kubernetes at diet](#kubernetes-at-diet)
+    + [Speaker notes](#speaker-notes)
+    + [K8s vs K3s](#k8s-vs-k3s)
+    + [K3s ecosystem](#k3s-ecosystem)
+  * [Increase the reliability of production releases with Kubernetes](#increase-the-reliability-of-production-releases-with-kubernetes)
+    + [Classic Kubernetes deployment](#classic-kubernetes-deployment)
+    + [Blue / Green deployment](#blue--green-deployment)
+    + [Canary releases](#canary-releases)
+      - [Replica](#replica)
+      - [IngressController](#ingresscontroller)
+      - [Service Mesh](#service-mesh)
+      - [Manual](#manual)
+    + [Closing notes](#closing-notes)
 
 ## CNCF time
 - [Rook](https://rook.io/), the stateful storage solution for Kubernetes is now in v1.0. [Blog post](https://blog.rook.io/rook-v1-0-a-major-milestone-689ca4c75508);
@@ -76,3 +90,47 @@ This mechanism is very simple, keeps the latest ReplicaSets alive, is Zero-Downt
 
 ### Blue / Green deployment
 
+- Generate the v2 but do not point the service yet;
+- Test the v2 internally;
+- Point the service to the v2;
+- Stop the v1.
+
+All of this can be done through labels and label selectors. The new deployment has a new label and your service will point to that new label once it is ready to be released.
+
+By doing this, you are ensured the v1 is still present in case you need to roll back. Releasing the v2 only required a Service update, which also makes ZDD impossible because IPTables updates causes a period of service unavailability while reloading. That and the tests are not executed under production conditions.
+
+### Canary releases
+
+v1 and v2 run in parallel and we actively choose which users go to v1 and which go to v2. There are multiple methods to implement Canary releases with Kubernees.
+
+#### Replica
+
+The Service knows v1 **and** v2 and evenly shares traffic. This method is not precise and wastes resources; to reach certain amounts like 27%, you will need 100 total pods running your application, 27 of which will be in the target version. Kubernetes will also work against your goal as the auto-scaling feature may slightly impact your release.
+
+#### IngressController
+
+Ingress are increasingly clever and can absorb more logic. They could themselves handle the allocation of the traffic to the right version. Taefik and NginX can do that natively and offer support through annotations right from the Ingress resource.
+
+Working with annotations is way safer than changing a resource specification as it does not trigger a full reload of that resource. Hence, this method conserves Zero Downtime Deployment, is officially supported by major Ingress controllers, gives you detailed control over different versions of your service and is unaffected by the autoscalability feature.
+
+But IngressControllers cannot solve everything: while this approach works with services exposed to the outside through HTTP, internal services are not served by an IngressController, thus will not benefit from this approach.
+
+#### Service Mesh
+
+Services will not communicate between them but will rather use a monitored and traced proxy layer. [Istio](https://istio.io/) can handle this with its Custom Resource Definitions, or CRDs.
+
+VirtualService and DestinationRule are the CRDs to use. The first one defines the general traffic matching and routing while the second defines policies to apply after successful routing.
+
+You could create a VirtualService with a route for the two versions of your application with specific weights and a DestinationRule which points to both versions of your application. Istio would then route requests taking your weights into account to create the right shares of traffic.
+
+Unfortunately, Service Meshes add **a high amount** of complexity to your architecture, makes debugging more complex and is often considered overkill.
+
+#### Manual
+
+By using a proxy like Nginx, HAProxy or Envoy, you could manually perform canary releases. Even though this solution is very straightforward, you would have to manage and eventually automate it yourself. To do so, you could rely on Operators to extend Kubernetes. For instance, whenever a certain object is detected, automatically generate the proxy configuration and update.
+
+### Closing notes
+
+If your testing process is not at least partially automated, do not deploy using Blue/Green as you would not be able to certify that the new version is properly working.
+
+Similarly, if you do not collect and process metrics, do not move to canary deployments, as you need to analyze metrics generated at production scale to carry on or cancel your deployment.
