--- a/meetups/cncf-bdx/2019-06-04_cncf5.md
+++ b/meetups/cncf-bdx/2019-06-04_cncf5.md
@@ -1,5 +1,5 @@
 # Cloud Native Computing Foundation Bordeaux #5
-🕑 *Estimated reading time:* **?mn**
+🕑 *Estimated reading time:* **8mn**
 
 ## Table of Contents
   * [CNCF time](#cncf-time)
