--- a/meetups/best-bdx/2019-01-29_best6.md
+++ b/meetups/best-bdx/2019-01-29_best6.md
@@ -12,7 +12,8 @@ For Yescapa, Amazon Web Services has been the platform of choice to get the busi
 
 ```
 Route 53 ---> CloudFront ---> EC2 ---> Elasticache
-                 |--> S3    <--|--> RDS
+                  |            |
+                   ---> S3 <--- -----> RDS
 ```
 
 Additionnally, with the [AWS Activate](https://aws.amazon.com/activate/) program, early stage startups can start with a credit to build their initial infrastructure and serve their first customers.
