--- a/meetups/cncf-bdx/2019-10-24_cncf6.md
+++ b/meetups/cncf-bdx/2019-10-24_cncf6.md
@@ -5,6 +5,17 @@
 
 ## CNCF time
 
+### News
+- [Kubernetes 1.16](https://kubernetes.io/blog/2019/09/18/kubernetes-1-16-release-announcement/) has been released in September of 2019. It is mostly a stabilization release leaning towards extensibility with the General Availability of [Custom Resource Definitions (CRDs)](https://kubernetes.io/docs/concepts/extend-kubernetes/api-extension/custom-resources/) and of the Webhooks, the stabilization of the Metrics and the Container Storage Interface (CSI). The next version of Kubernetes is expected for December 2019;
+- [Knative](https://knative.dev/) is a solution designed to host serverless workloads on Kubernetes based on [Istio](https://istio.io/), a service mesh. Unfortunately, the governance of Knative is mainly composed of Googlers and recently decided not to donate it to the CNCF. It is to be expected that development from other vendors will slow down as a consequence of Google's decision;
+- [KubeCon San Diego 2019](https://events19.linuxfoundation.org/events/kubecon-cloudnativecon-north-america-2019/) will happen soon! Book your trip and reserve a seat if you have not done so yet!
+- The Call for Proposals of [KubeCon Europe 2020](https://events19.linuxfoundation.org/events/kubecon-cloudnativecon-europe-2020/) has started. The event will be held between March 30th and April 2nd. If you desire to present your ideas to the public or just want a free seat at the event, submit a talk and hope for the best. Usually, experience feedbacks are a good way to claim a speaker spot!
+- On the subject of events, do not forget [BDX I/O 2019](https://www.bdx.io), the 15th of November.
+
+### Discovery of the session
+
+[ebriand/kubernetes-security-workshop](https://github.com/ebriand/kubernetes-security-workshop) is the GitHub trace of a workshop held by Eric Briand, CTO @ Zenika. Check it out if you wish to learn more about security practices within a Kubernetes cluster.
+
 ## Advanced monitoring in Kubernetes
 By [Étienne Coutaud](https://twitter.com/etiennecoutaud), Founder @ Pyxida  
 [Slides](https://speakerdeck.com/etiennecoutaud/monitoring-avance-dans-kubernetes-avec-prometheus)
