--- a/meetups/cncf-bdx/2019-10-24_cncf6.md
+++ b/meetups/cncf-bdx/2019-10-24_cncf6.md
@@ -20,6 +20,63 @@
 By [Étienne Coutaud](https://twitter.com/etiennecoutaud), Founder @ Pyxida  
 [Slides](https://speakerdeck.com/etiennecoutaud/monitoring-avance-dans-kubernetes-avec-prometheus)
 
+The concept of observability is a set containing metrics, logs and traces. Metrics can be aggregated, logs represent your application events and traces come from requests.
+
+[Prometheus](https://prometheus.io/) has been created in 2012 by [SoundCloud](https://soundcloud.com/) and adopted by the CNCF in 2016. Just after Kubernetes, Prometheus has been one of the first projects to cross the Chasm and reach the Graduated status, which proves its robustness and stability, so much that it is becoming a _de facto_ solution.
+
+In 2017 came [OpenMetrics](https://openmetrics.io/), a standardization effort that facilitates writing and reading metrics at every level, be it system, middleware (network, kubelet, control plane, database), application and business metrics, often by design! It is indeed possible to expose new metrics by following the format.
+
+### Architecture
+
+```
+   Jobs                                   Services                           --▶ Email
+     |                                       ▲                              |--▶ PagerDuty
+     |                                       |                              |
+     ▼                         ----▶ Service Discovery                      |
+Push Gateway                  |                                       Alert Manager
+     ▲                        |                                             ▲
+     |                 -----------------------------------------            |
+     |                |       |                                 |           |
+     ├----------------|-- Collector -▶ Time Series -▶  HTTP  ---|-----------┘
+     |                |                  Database     Server ◀--|-----------┐
+     |                |                     |                   |           |
+     |                 -----------------------------------------            |
+     ▼                                      |                               |-- Web UI
+ Exporters                                  ▼                               |-- Grafana
+ (Targets)                               Storage                             -- Clients API
+```
+
+Of all these components, many can be hosted by Kubernetes: the server (Collector, Time Series Database, HTTP Server), Grafana, exporters, the alert manager. The Collector components collects metrics at a defined pace however some applications may not be alive at the moment metrics are collected such as short-lived jobs. To avoid missing on metrics, short-lived jobs can send their metrics on a Push Gateway which will store and expose them to the Collector. The Push Gateway can be seen as a proxy component that solves the inherent short life expectancy of jobs metrics.
+
+Applications feeding on the HTTP Server will need to use a specific language called PromQL.
+
+### Kubernetes
+
+Kubernetes natively exposes Prometheus-compatible metrics and tools are available to help administrators installing the setup:
+- [coreos/kube-prometheus](https://github.com/coreos/kube-prometheus) collects manifests and snippets that build the stack above. They also serve as a base for the Prometheus operator;
+- [coreos/prometheus-operator](https://github.com/coreos/prometheus-operator), through the use of Custom Resource Definitions, eases Prometheus management on Kubernetes clusters.
+
+How do Kubernetes operators work? They follow the Reconciliation loop / pattern: Observe, Analyze, Act.
+- Observe: Read the state of the stack;
+- Analyze: Compare to the desired state;
+- Act: Compute the difference and steer the stack towards the desired state.
+
+The GitHub repositories will install the following Kubernetes CRDs: alertmanager.monitoring.coreos.com, podmonitor.monitoring.coreos.com, prometheuses.monitoring.coreos.com, prometheusrules.monitoring.coreos.com, servicemonitors.monitoring.coreos.com. These CRDs can be versioned, sent and processed by Kubernetes. In addition, it will start an Alert Manager cluster, a Grafana dashboard, kube-state-metrucs aggregators, node_exporter modules, Prometheus adapters, Prometheus and the Prometheus operator.
+
+### Expose custom metrics
+
+Prometheus offers [client libraries / SDKs](https://prometheus.io/docs/instrumenting/clientlibs/) that can be integrated into many technologies. From Prometheus's side, you can create an endpoint by using the Service Monitor CRD, bt referencing the new service using the labels. This looks the service up and reconfigures Prometheus to retrieve and process the new metrics.
+
+Note that Kubernetes annotations would work as well in this case nevertheless they are less precise than Service Monitor and from the latest Kubernetes features in development, namely XMonitor, PodMonitor and NodeMonitor. Monitors are not without ssues, though: sidecars like [Istio](https://istio.io/) that deploys proxy containers next to services will not get their metrics retrieved, hence the emergence of new Monitors in Kubernetes.
+
+Beware: by default, Prometheus will be deployed in a defined namespace. Do not forget to use RBAC to allow it to retrieve metrics from services located in other namespaces.
+
+### Conclusion
+
+Monitoring is always good, even more when adding application and business metrics is easy. Following up on metrics is not: your alerts and dashboards will need maintenance to avoid [Alert fatigue](https://en.wikipedia.org/wiki/Alarm_fatigue), i.e. becoming desentized by alerts and missing on important ones or not capturing any event at all. On the subject of following up, defining a monitoring strategy can be essential: it is possible to assign a cluster for each team, a global one, both, on multiple datacenters, etc.
+
+Prometheus and its ecosystem like its language PromQL are powerful but by default, the retention of a cluster is very short because of its architecture. It is estimated that a Prometheus cluster will rarely keep more than two weeks worth of metrics. Fortunately, there are strategies to counter that limitation such as [Thanos](https://thanos.io/).
+
 ## In need of long-term Prometheus metrics? Thanos will make Marvels!
 By [Denis Germain](https://twitter.com/zwindler), Cloud Engineer @ Lectra  
 [Personal website](https://blog.zwindler.fr) - [Slides](https://blog.zwindler.fr/wp-content/uploads/2019/10/CNCF_meetup6_Thanos.pdf) - [Blog post](https://blog.zwindler.fr/2019/10/24/cncf-bdx-6-les-slides-de-mon-talk-thanos/)
