--- a/meetups/cncf-bdx/2019-10-24_cncf6.md
+++ b/meetups/cncf-bdx/2019-10-24_cncf6.md
@@ -1,7 +1,22 @@
 # Cloud Native Computing Foundation Bordeaux #6 - Observability and monitoring
-🕑 *Estimated reading time:* **?mn**
+🕑 *Estimated reading time:* **11mn**
 
 ## Table of Contents
+  * [CNCF time](#cncf-time)
+    + [News](#news)
+    + [Discovery of the session](#discovery-of-the-session)
+  * [Advanced monitoring in Kubernetes](#advanced-monitoring-in-kubernetes)
+    + [Observability and Prometheus](#observability-and-prometheus)
+    + [Architecture](#architecture)
+    + [Kubernetes](#kubernetes)
+    + [Expose custom metrics](#expose-custom-metrics)
+    + [Conclusion](#conclusion)
+  * [In need of long-term Prometheus metrics? Thanos will make Marvels!](#in-need-of-long-term-prometheus-metrics-thanos-will-make-marvels)
+    + [Prometheus weakness: scalability](#prometheus-weakness-scalability)
+    + [Sharding considerations](#sharding-considerations)
+    + [The solution](#the-solution)
+    + [Downsampling](#downsampling)
+    + [Going further](#going-further)
 
 ## CNCF time
 
@@ -19,6 +34,8 @@
 ## Advanced monitoring in Kubernetes
 By [Étienne Coutaud](https://twitter.com/etiennecoutaud), Founder @ Pyxida  
 [Slides](https://speakerdeck.com/etiennecoutaud/monitoring-avance-dans-kubernetes-avec-prometheus)
+
+### Observability and Prometheus
 
 The concept of observability is a set containing metrics, logs and traces. Metrics can be aggregated, logs represent your application events and traces come from requests.
 
@@ -80,3 +97,44 @@ Prometheus and its ecosystem like its language PromQL are powerful but by defaul
 ## In need of long-term Prometheus metrics? Thanos will make Marvels!
 By [Denis Germain](https://twitter.com/zwindler), Cloud Engineer @ Lectra  
 [Personal website](https://blog.zwindler.fr) - [Slides](https://blog.zwindler.fr/wp-content/uploads/2019/10/CNCF_meetup6_Thanos.pdf) - [Blog post](https://blog.zwindler.fr/2019/10/24/cncf-bdx-6-les-slides-de-mon-talk-thanos/)
+
+### Prometheus weakness: scalability
+
+Prometheus stores its metrics on local block storage and shifts blocks every two hours. It can store millions of samples and request across multiple time series at once. [DigitalOcean](https://www.digitalocean.com/) runs Prometheus at scale and ran into a storage issue. No choice: they had to **shard**.
+
+In Prometheus, performance is dependent on the nature of stored metrics and of the storage hardware. Scaling implies increasing the amount of available storage which is costly, not a long-lasting or sustaiable fix and still complex when querying metrics after a few weeks or months. Storing elsewhere is not recommended for and not supported anyway.
+
+### Sharding considerations
+
+Two good practices: always put at least one server per failure domain and remember to never put sources that you could correlate on different servers. A failure domain is basically a blast zone: a cluster or a datacenter and correlating sources from different servers is very impractical.
+
+Prometheus metrics can be aggregated right from Grafana by adding multiple Prometheus servers as sources to the same dashboard. Unfortunately, that multiplies the dashboard construction work and widgets by the number of Prometheus sources but data loss on one server can be covered by information from other servers.
+
+A root Prometheus could be the solution then. It could collect metrics from leaf Prometheus servers. This is the recommended solution but beware of the load! You could opt for a hybrid solution to limit risks: federating metrics for time series that can be correlated and leaving the other metrics to their origin servers.
+
+In any case, only having one Prometheus server leads to a Single Point of Failure. However, the recommended solution multiplying servers is not ideal as well. Not only you would use twice the resources but you would get two strictly identical data sources. Fronting multiple servers with an L7 load balancer is less than ideal either: if one of your servers stops working, you end up with a hole in one of your time series and a bump in the other. Unfortunately, you will have to go with the recommended solution here: doubling Prometheus servers and sending the same metrics to both.
+
+### The solution
+
+[Thanos](https://thanos.io/) has been released in 2017 by [Improbable](https://improbable.io/) and is still in development. It integrated the CNCF as a sandbox project in August of 2019. Thanos is fully compatible with Prometheus and its ecosystem, can potentially offer infinite data retention, handle correlation of multiple Prometheus servers, replicas, offer better data compaction and an integrated downsampling feature.
+
+Thanos works as a sidecar for Prometheus. It exports historical data to a permanent storage, usually [Amazo S3](https://aws.amazon.com/s3/), its storage gateway handles long term reads and its queryer serves as a proxy between Grafana and the sidecard. This means that Grafana will exchange with Thanos which will query the Prometheus servers and the long term storage transparently while conserving full compatibility with Prometheus's API and language! Even the interface is very similar to Prometheus.
+
+If you wish yo use Thanos, update Prometheus. Prometheus 2.13.0 and Thanos 0.8.1 together bring **noticeable** improvements in CPU and RAM usage as well as latency.
+
+### Downsampling
+
+In its core, downsampling reduces the number of exposed samples by grouping them and pre-computing _count_, _sum_, _min_, _max_ and _counter_ (rate and rate change) to greatly speed up queries over very long periods.
+
+```
+RAW ------- (After 48h) -------> @5mn ------- (After 8d) --------> @1h
+                Compaction                        Compaction
+```
+
+### Going further
+
+It is even possible to get faster by using a cache layer on top of Thanos called [Trickster](https://github.com/comcast/trickster). The project is in development but offers promising results already, at leased used on top of Prometheus.
+
+If your systems generate a lot of metrics, you might end up paying a lot for log retention, even with downsampling enabled and fine tuned to your needs. To reduce costs, it is recommended to also finetune the S3 class that you use for storage: choose the cheapest that matches your needs. S3 Standard-IA is often a good choice unless you query your data very often.
+
+Finally, for a presentation of Prometheus at scale by Improbable themselves: [Thanos: Global, durable Prometheus monitoring](https://promcon.io/2018-munich/slides/thanos-prometheus-at-scale.pdf).
