--- a/meetups/cncf-bdx/2019-10-24_cncf6.md
+++ b/meetups/cncf-bdx/2019-10-24_cncf6.md
@@ -25,7 +25,7 @@
 - [Knative](https://knative.dev/) is a solution designed to host serverless workloads on Kubernetes based on [Istio](https://istio.io/), a service mesh. Unfortunately, the governance of Knative is mainly composed of Googlers and recently decided not to donate it to the CNCF. It is to be expected that development from other vendors will slow down as a consequence of Google's decision;
 - [KubeCon San Diego 2019](https://events19.linuxfoundation.org/events/kubecon-cloudnativecon-north-america-2019/) will happen soon! Book your trip and reserve a seat if you have not done so yet!
 - The Call for Proposals of [KubeCon Europe 2020](https://events19.linuxfoundation.org/events/kubecon-cloudnativecon-europe-2020/) has started. The event will be held between March 30th and April 2nd. If you desire to present your ideas to the public or just want a free seat at the event, submit a talk and hope for the best. Usually, experience feedbacks are a good way to claim a speaker spot!
-- On the subject of events, do not forget [BDX I/O 2019](https://www.bdx.io), the 15th of November.
+- On the subject of events, do not forget [BDX I/O 2019](https://www.bdx.io), the 15th of November of 2019.
 
 ### Discovery of the session
 
@@ -118,7 +118,7 @@ In any case, only having one Prometheus server leads to a Single Point of Failur
 
 [Thanos](https://thanos.io/) has been released in 2017 by [Improbable](https://improbable.io/) and is still in development. It integrated the CNCF as a sandbox project in August of 2019. Thanos is fully compatible with Prometheus and its ecosystem, can potentially offer infinite data retention, handle correlation of multiple Prometheus servers, replicas, offer better data compaction and an integrated downsampling feature.
 
-Thanos works as a sidecar for Prometheus. It exports historical data to a permanent storage, usually [Amazo S3](https://aws.amazon.com/s3/), its storage gateway handles long term reads and its queryer serves as a proxy between Grafana and the sidecard. This means that Grafana will exchange with Thanos which will query the Prometheus servers and the long term storage transparently while conserving full compatibility with Prometheus's API and language! Even the interface is very similar to Prometheus.
+Thanos works as a sidecar for Prometheus. It exports historical data to a permanent storage, usually [Amazon S3](https://aws.amazon.com/s3/), its storage gateway handles long term reads and its queryer serves as a proxy between Grafana and the sidecard. This means that Grafana will exchange with Thanos which will query the Prometheus servers and the long term storage transparently while conserving full compatibility with Prometheus's API and language! Even the interface is very similar to Prometheus.
 
 If you wish yo use Thanos, update Prometheus. Prometheus 2.13.0 and Thanos 0.8.1 together bring **noticeable** improvements in CPU and RAM usage as well as latency.
 
