--- a/_posts/2018/10/2018-10-16-best5.md
+++ b/_posts/2018/10/2018-10-16-best5.md
@@ -1,6 +1,6 @@
 ---
 categories: ["meetups/best-bdx"]
-title: "Bordeaux Engineers Share and Talk #5"
+title: "Bordeaux Engineers Share & Talk #5"
 ---
 
 {% include time.md %}
