--- a/_posts/2019/01/2019-01-29-best6.md
+++ b/_posts/2019/01/2019-01-29-best6.md
@@ -1,6 +1,6 @@
 ---
 categories: ["meetups/best-bdx"]
-title: "Bordeaux Engineers Share and Talk #6"
+title: "Bordeaux Engineers Share & Talk #6"
 ---
 
 {% include time.md %}
