--- a/_posts/2019/10/2019-10-22-best7.md
+++ b/_posts/2019/10/2019-10-22-best7.md
@@ -1,6 +1,6 @@
 ---
 categories: ["meetups/best-bdx"]
-title: "Bordeaux Engineers Share and Talk #7 - On Blockchain"
+title: "Bordeaux Engineers Share & Talk #7 - On Blockchain"
 ---
 
 {% include time.md %}
