--- a/_posts/2019/12/2019-12-12-best8.md
+++ b/_posts/2019/12/2019-12-12-best8.md
@@ -1,6 +1,6 @@
 ---
 categories: ["meetups/best-bdx"]
-title: "Bordeaux Engineers Share and Talk #8 - Web technologies evolution"
+title: "Bordeaux Engineers Share & Talk #8 - Web technologies evolution"
 ---
 
 {% include time.md %}
