fix: Mistakes here and there

--- a/_posts/2022/05/2022-05-19-symfony-61.md
+++ b/_posts/2022/05/2022-05-19-symfony-61.md
@@ -17,14 +17,14 @@ at your convenience as would Drupal or Laravel do. This property is called "modu
 advantages of the ecosystem.
 
 Symfony is stable, predictable and performant. Its update lifecycle is public and well known: one major version every
-two years and one minor every six months. This means that every two years one major and one minor release at the same
-time.
+two years and one minor every six months. This means that every two years one major *and* one minor versions release
+simultaneously.
 
 ## Contributions
 
 There are multiple levels of contributions to Symfony:
 
-- **Minor**: no behavioral change to the components. Code style, comments, CI/CD, etc.;
+- **Minor**: No behavioral change to the components. Code style, comments, CI/CD, etc.;
 - **Bug**: Fixing behaviors, starts from the most relevant branch so that the fix reaches users of older maintained
   versions as well as the in-development one;
 - **Feature**: Symfony is used on many real-world applications. Features need to be justified with real-world reasons;
@@ -40,11 +40,11 @@ The last six months of contributions, a.k.a. the path from Symfony 6.0 to 6.1 lo
 - **230** Minor, **320** Bug and **130** Feature contributions merged.
 
 The number of merges don't add up to the number of open Pull Requests because not all of them are automatically
-accepted. Some require more work that gets them pushed to the next version. Some other contributions did not pass the
-review process of were simply abandoned by their authors.
+accepted. Some require more work that gets them pushed back to the next version. Others did not pass the review process
+of were abandoned by their authors.
 
-The last month before a release, the core team freezes the code in order to stabilize the features included in the next
-version. In addition, the blog editors do some write-ups to feature some of them on the [Living on the edge](https://symfony.com/blog/category/living-on-the-edge){:rel="nofollow"}
+The last month before a release, the core team freezes the code in order to stabilize the next version. In addition, the
+blog editors contribute write-ups featuring next release highlights on the [Living on the edge](https://symfony.com/blog/category/living-on-the-edge){:rel="nofollow"}
 category of the official Symfony blog.
 
 ## What's new
@@ -65,8 +65,8 @@ and thus maintainability gets better. Here is an example:
 $this->foo(...) // Yes, "..." is part of the syntax
 ```
 
-A pet peeve of many developers was checking is an array was associative or a list. To check if an array is a list, you
-have to check whether its keys range from zero to its length minus one. This is a matter of writing code like the following:
+A pet peeve of many developers was checking whether an array is associative or a list. A shorthand would be to check
+whether its keys range from zero to its length minus one:
 
 ```php
 function array_is_list(array $a): bool
@@ -79,19 +79,18 @@ For that matter specifically, the [array_is_list](https://www.php.net/manual/en/
 function is now available!
 
 [Other changes](https://www.php.net/releases/8.1/en.php){:rel="nofollow"} include readonly properties, `new` in
-initializers and pure intersection types. These all help modernize Symfony's code. This modernization work is continuous
-and done with respect to retrocompatibility. Some of the last pushes in this regard concern the optional variable name
-for caught expressions and [match control structures](https://www.php.net/manual/en/control-structures.match.php){:rel="nofollow"}
+initializers and pure intersection types. These all help modernize Symfony's code. This modernization effort is
+continuous and done with respect to retrocompatibility. Some of the last pushes in this regard concern the optional
+variable name for caught expressions and [match control structures](https://www.php.net/manual/en/control-structures.match.php){:rel="nofollow"}
 both introduced in PHP 8.0.
 
 ### In Symfony
 
-The only new component that ships with Symfony 6.1 is HtmlSanitizer, introduced in this [blog post](https://symfony.com/blog/new-in-symfony-6-1-htmlsanitizer-component){:rel="nofollow"}.
+The only new component that ships with Symfony 6.1 is `HtmlSanitizer`, introduced in this [blog post](https://symfony.com/blog/new-in-symfony-6-1-htmlsanitizer-component){:rel="nofollow"}.
 The need to sanitize HTML input is extremely common. So much that Titouan Galopin implemented [tgalopin/html-sanitizer](https://github.com/tgalopin/html-sanitizer){:rel="nofollow"},
 a library that solves this issue once and for all. The community followed suit and this work ended up in Symfony after
-some refactoring. The component works as a pattern builder to describe what is allowed and what is not in strings to
-sanitize. It integrates with other components such as symfony/ux and gets additional visibility thanks to the Symfony
-brand.
+some refactoring. The component works as a pattern builder to describe what is allowed in strings to sanitize. It
+integrates with other components such as symfony/ux and gets additional visibility thanks to the Symfony brand.
 
 Switching locales will get easier with the new LocaleSwitcher introduced in this [blog post](https://symfony.com/blog/new-in-symfony-6-1-locale-switcher){:rel="nofollow"}.
 All the services tagged with `kernel.locale_aware` as well as your templates, emails and whatnot can now switch locales
@@ -183,3 +182,20 @@ The implementation goal for class decorators is to avoid maintaining code and co
 be expressed from the code alone. Furthermore, the current Yaml syntax is still valid and fully supported: PHP Arguments
 are only supported as an alternate syntax to improve developer experience. It is certainly more magical and harder to
 understand but as efficient.
+
+## Post-meetup discoveries
+
+[Bref](https://bref.sh/){:rel="nofollow"} makes PHP application deployment simpler by removing servers and scaling from
+the equation and creating an environment that closely follows the load of the application. This practice is called
+"Serverless" and has been increasing in popularity over the last few years. Unfortunately, PHP has long been throught of
+as a runtime tied to servers. This project exists to contradict that line of thinking.
+
+[Pactflow](https://pactflow.io/){:rel="nofollow"} is a platform made by Smartbear, a company who got extremely famous
+for their comprehensive work around APIs and testing. If you ever heard about OpenAPI and Cucumber, well that's them!
+Pactflow is to be used when multiple teams need to integrate their systems. This is contract testing at scale and made
+serious.
+
+[The Mikado Method](http://mikadomethod.info/){:rel="nofollow"} explains, just like in the game of the same name, how to
+carefully remove debt hidden deep inside a legacy system by taking a scratching the surface approach that is reminiscent
+of Martin Fowler's Strangler Pattern. This approach is meant for legacy systems, where engineers are looking for
+absolute stability and is lightweight to help teams cope with the complexity of the system itself.
