--- a/_posts/2023/07/2023-07-11-start-ui.md
+++ b/_posts/2023/07/2023-07-11-start-ui.md
@@ -144,5 +144,5 @@ application using SSG may need two layers: one for the static part and one for t
 
 ### Is route internationalization supported?
 
-NextJS supports path internationalization and user preferences. An alternative would be to create URLs via
-redirections to support translations.
+NextJS supports path internationalization and user preferences. An alternative would be to create URLs via redirections
+to support translations.
