fix: StartUI link led to a 404 page

--- a/_posts/2023/07/2023-07-11-start-ui.md
+++ b/_posts/2023/07/2023-07-11-start-ui.md
@@ -120,7 +120,7 @@ resends are built-in. It's a wrapper around Promises that adds a configurable la
 
 ## StartUI
 
-[StartUI]({:rel="nofollow"}){:rel="nofollow"} implements an administration interface using all the technical choices
+[StartUI](https://start-ui.com/){:rel="nofollow"} implements an administration interface using all the technical choices
 discussed here and additional features that will make teams save time during development. This project is [Open Source](https://github.com/BearStudio/start-ui-web){:rel="nofollow"}
 and developed by [BearStudio](https://www.bearstudio.fr/){:rel="nofollow"} because they were reimplementing a similar
 technical stack on every new project. This battery-packed starter includes configured [ESLint](https://eslint.org/){:rel="nofollow"},
